--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SettingActivity" />
-        <activity android:name=".ChangeBackgroundActivity"></activity>
+        <activity android:name=".ChangeBackgroundActivity" />
+        <activity android:name=".DetailActivity"></activity>
     </application>
 
 </manifest>
